test/bad/classes/struct08.px

class A def
    x: Rat

A(8f)
